# Livraria

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
core/views/: __init__.py  autor.py  categoria.py  categoria_ApiView.py  categoria_Class.py  categoria_Generics.py  compra.py  editora.py  livro.py  testes_iniciais.py
livraria/: settings.py  urls.py
static/: staticfiles.json
