[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["LucasIdalino <lucasidalino14@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
