[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["LucasIdalino <lucasidalino14@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.15"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
drf-spectacular = "^0.22.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
